# amrex_tutorial

./: CMakeLists.txt  README.md  setup_tutorial.cmake
CNS/: CMakeLists.txt
HeatEquation/: CMakeLists.txt
HeatEquation/Source/: myfunc.cpp  mykernel.H
Source/: myfunc.cpp
